# alpha-workbench

./: .dockerignore  .env.template  .gitignore  AGENTS.md  DOCKER.md  Dockerfile  README.md  docker-compose.yaml  interfaces.md  pyproject.toml
alpha_workbench/: __init__.py  __main__.py
alpha_workbench/agents/: __init__.py  audit_agent.py  backtest_explainer.py  factor_generator.py  idea_extractor.py  report_agent.py
alpha_workbench/app/: research_config.py  status.py  streamlit_app.py
alpha_workbench/backtest/: __init__.py  engine.py  factor_backtest.py  hybrid_engine.py  llm_explainer.py  mercury_adapter.py  metrics.py  plotter.py  rebalance.py
alpha_workbench/data/: README.md  __init__.py  csv_loader.py  sample_data.py  universe.py
alpha_workbench/factor_engine/: __init__.py  compiler.py  expression_evaluator.py  factor_calculator.py
alpha_workbench/interfaces/: __init__.py  role_interfaces.py
alpha_workbench/memory/: __init__.py  research_trace.py
alpha_workbench/parsers/: __init__.py  text_parser.py
alpha_workbench/schemas/: __init__.py  backtest_schemas.py  specs.py
docs/: acceptance_checklist.md  demo_script.md  role3.md  role5_summary.md  team_work_plan.md
role3/: __init__.py  fallback.py  finance_taxonomy.py  huawei_api.py  idea_extractor.py  pdf_parser.py  prompt_templates.py  role3_codex_prompt.md  role3_development_guide.md  run_role3_huawei.py  validators.py  workflow.py
scripts/: install_uv.bat  install_uv.sh  start_demo.bat  start_demo.sh
tests/: test_backtest_config.py  test_demo_workflow.py  test_integration_workflow.py
(+10 files in other folders)
