[project]
name = "alpha-workbench"
version = "0.1.0"
description = "Research-report driven human-in-the-loop quant factor research demo."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.8.0",
    "httpx>=0.25.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "scipy>=1.9.0",
    "streamlit>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
alpha-workbench-demo = "alpha_workbench.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["alpha_workbench*"]

[tool.uv]
package = true
index-url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
